<?xml version="1.0"?>
<package format="3">
  <name>motionserver</name>
  <version>0.1.0</version>
  <description>MoveIt and motion control nodes for YouBot.</description>

  <maintainer email="dev@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Core dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <depend>ament_index_cpp</depend>

  <!-- MoveIt dependencies -->
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_msgs</depend>

  <!-- Launch and utilities -->
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>moveit_configs_utils</depend>

  <!-- JSON and custom messages -->
  <depend>nlohmann_json</depend>
  <depend>my_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
